Update pricings of pies

--- a/www/index.html
+++ b/www/index.html
@@ -154,8 +154,7 @@
 					<span>AVAILABLE IN SEASON and slightly beyond.</span>
 					<p>
 						strawberry/rhubarb, cherry, peach, peach/berry, apple...<br>
-						<i>continuously inventing new recipes</i><br>
-						<b>$17</b>
+						<i>continuously inventing new recipes</i>
 					</p>
 				</div>
 			</div>
@@ -166,7 +165,7 @@
 							<a href="#"><img src="images/blog/apple.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">APPLE PIE</a></h5>
+							<h5><a href="#">APPLE PIE - $17</a></h5>
 							<span>From September through Christmas</span>
 							<p>&nbsp;</p>
 						</div>
@@ -178,7 +177,7 @@
 							<a href="#"><img src="images/blog/triple-berry.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">PEACH or PEACH/TRIPLE BERRY</a></h5>
+							<h5><a href="#">PEACH or PEACH/TRIPLE BERRY - $17</a></h5>
 							<span>From August through Thanksgiving</span>
 							<p>raspberry, blackberry &amp; blueberry</p>
 						</div>
@@ -190,7 +189,7 @@
 							<a href="#"><img src="images/blog/strawberry.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">STRAWBERRY/RHUBARB PIE</a></h5>
+							<h5><a href="#">STRAWBERRY/RHUBARB PIE - $17</a></h5>
 							<span>From May to July</span>
 							<p>Lattice top or full crust</p>
 						</div>
@@ -206,7 +205,7 @@
 							<a href="#"><img src="images/blog/cherry2.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">CHERRY PIE</a></h5>
+							<h5><a href="#">CHERRY PIE - $20</a></h5>
 							<span>From July 4th through Thanksgiving</span>
 							<p>&nbsp;</p>
 						</div>
@@ -279,8 +278,7 @@
 				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
 					<h1>SPECIAL PIES</h1>
 					<p>
-						Pumpkin chiffon pie, Pecan pie, Chocolate chip pie, Caramel apple pie<br>
-						<b>$17 each, except Pecan which is $20</b>
+						Pumpkin chiffon pie, Pecan pie, Chocolate chip pie, Caramel apple pie
 					</p>
 				</div>
 			</div>
@@ -291,7 +289,7 @@
 							<a href="#"><img src="images/blog/caramel-apple3.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">CARAMEL APPLE PIE</a></h5>
+							<h5><a href="#">CARAMEL APPLE PIE - $20</a></h5>
 							<span>Available September 15th through Christmas</span>
 							<p>&nbsp;</p>
 						</div>
@@ -303,7 +301,7 @@
 							<a href="#"><img src="images/blog/pecan.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">PECAN PIE</a></h5>
+							<h5><a href="#">PECAN PIE - $20</a></h5>
 							<span>Available for Thanksgiving and Christmas</span>
 							<p>&nbsp;</p>
 						</div>
@@ -315,7 +313,7 @@
 							<a href="#"><img src="images/blog/choco-chip.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">CHOCOLATE CHIP PIE</a></h5>
+							<h5><a href="#">CHOCOLATE CHIP PIE - $17</a></h5>
 							<span>Available all year</span>
 							<p>&nbsp;</p>
 						</div>
@@ -331,8 +329,8 @@
 							<a href="#"><img src="images/blog/pumpkin2.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">PUMPKIN CHIFFON PIE</a></h5>
-							<span>Choose between graham cracker or pastry crust.<br>Available November through Christmas</span>
+							<h5><a href="#">PUMPKIN CHIFFON PIE - $17</a></h5>
+							<span>Available November through Christmas</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
