Add new special pies. Edit the dinner pies. Update Kelli's picture

--- a/www/index.html
+++ b/www/index.html
@@ -322,8 +322,6 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-4">
-				</div>
-				<div class="col-sm-4">
 					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
 						<div class="blog_img">
 							<a href="#"><img src="images/blog/pumpkin2.jpg" alt="" /></a>
@@ -331,6 +329,44 @@
 						<div class="blog_text">
 							<h5><a href="#">PUMPKIN CHIFFON PIE - $17</a></h5>
 							<span>Available November through Christmas</span>
+							<p>&nbsp;</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/cranberry-apple-walnut2.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">CRANBERRY APPLE WALNUT - $20</a></h5>
+							<span>Available Thanksgiving through New Year's</span>
+							<p>&nbsp;</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/peanut-butter-pie.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">PEANUT BUTTER PIE - $20</a></h5>
+							<span>Whipped fluffy peanut butter cream with a chocolate peanut butter cup topping</span>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/lemon-meringue.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">LEMON MERINGUE PIE - $17</a></h5>
+							<span>Available all year</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
@@ -345,10 +381,13 @@
 			<div class="row">
 				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
 					<h1>DINNER PIES</h1>
-					<p>Available all year round: chicken or beef<br>
+					<p>Available all year round: Chicken, Turkey, or Vegetarian<br>
 						6" personal size (serves 1-2) - <b>$7.50</b><br>
 						12" family size (serves 4-6) - <b>$22</b><br>
-						<i>Available frozen ready to put in your freezer or cooked ready to pick up for dinner.</i>
+						Beef also avaialble:<br>
+						6" personal size (serves 1-2) - <b>$8</b><br>
+						12" family size (serves 4-6) - <b>$25</b><br>
+						<i>Available fresh, frozen or cooked.</i>
 					</p>
 				</div>
 			</div>
@@ -422,7 +461,7 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="team_text wow fadeInRight" data-wow-delay="0.3s">
-						<img src="images/team/kelli.jpg" alt="" />
+						<img src="images/team/kelli2.jpg" alt="" />
 						<div class="team_single_text">
 							<span class="span_first">Kelli</span><br />
 						</div>
