--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,7 @@
 				<nav class="mainmenu"  id="navbar-example">
 					<ul id="nav" class="nav nav-tabs" role="tablist">
 						<li><a href="#home">HOME</a></li>
+						<li><a href="#season">XMAS</a></li>
 						<li><a href="#fruits">FRUITS PIES</a></li>
 						<li><a href="#cream">CREAM PIES</a></li>
 						<li><a href="#special">SPECIAL PIES</a></li>
@@ -67,84 +68,28 @@
 		</div>
 	</header>
 	<!-- header-section-end -->
-	<!-- slider-section-start -->
-	<section class="slider_area">
-		<div id="image_carousel_1" class="carousel slide" data-ride="carousel">
-			<ol class="carousel-indicators slider_indicators">
-				<li data-target="#image_carousel_1" data-slide-to="0" class="active"></li>
-				<li data-target="#image_carousel_1" data-slide-to="1"></li>
-				<li data-target="#image_carousel_1" data-slide-to="2"></li>
-			</ol>
-			<div class="carousel-inner" role="listbox">
-				<div class="item active">
-					<div class="single_slide">
-						<div class="slider_bg slide-1"></div>
-						<div class="container">
-							<div class="row">
-								<div class="col-md-4 col-sm-6">
-									<div class="slide_text">
-										<div class="table">
-											<div class="table-cell">
-												<h1>WE LOVE PIES</h1>
-												<div class="bg-yellow"></div>
-												<span>Making pies is an art... This starts from selecting the best ingredients, but also giving it time &amp; love...</span><br />
-												<a class="digital" href="#contact">Order your custom pie</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="single_slide">
-						<div class="slider_bg slide-2"></div>
-						<div class="container">
-							<div class="row">
-								<div class="col-md-4 col-sm-6">
-									<div class="slide_text">
-										<div class="table">
-											<div class="table-cell">
-												<h1>FRUIT PIES</h1>
-												<div class="bg-yellow"></div>
-												<span>Apple, peach, berry... made with local produce</span><br />
-												<a class="digital" href="#contact">Order your fresh Pie</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="single_slide">
-						<div class="slider_bg slide-3"></div>
-						<div class="container">
-							<div class="row">
-								<div class="col-md-4 col-sm-6">
-									<div class="slide_text">
-										<div class="table">
-											<div class="table-cell">
-												<h1>DINNER PIES</h1>
-												<div class="bg-yellow"></div>
-												<span>Beef, chicken and seasonal</span><br />
-												<a class="digital" href="#contact">Order Now</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+	<section class="blog section_padding text-center season" id="season">
+		<div class="container">
+			<div class="row">
+				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
+					<h1 class="red_text" style="font-size: 36px;">🎄☃️ CHRISTMAS PIES ☃️🎄</h1>
+					<p style="font-size: 20px; padding-bottom: 20px;">
+						Cranberry Apple Walnut Pie $20<br>
+						Black Bottom Eggnog Pie $20<br>
+						Banana Cream Pie $17<br>
+						Coconut Cream Pie $17<br>
+						Chocolate Cream Pie $17<br>
+						Pumpkin Chiffon Pie $17<br>
+						Pecan Pie $20<br>
+						Peanut Butter Pie $20<br>
+						Apple Pie $17 (limited quantities)<br>
+						Caramel Apple Pie $20 (limited quantities)
+					</p>
+					<span>❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️</span>
 				</div>
 			</div>
-			<a class="left fawesome-control" href="#image_carousel_1" role="button" data-slide="prev"><img src="images/slider/arrow-pre.png" alt="" /></a>
-			<a class="right fawesome-control" href="#image_carousel_1" role="button" data-slide="next"><img src="images/slider/arrow-next.png" alt="" /></a>
 		</div>
 	</section>
-	<!-- slider-section-end -->
 	<!-- blog-section-start -->
 	<section class="blog section_padding text-center fruit" id="fruits">
 		<div class="container">
@@ -179,7 +124,7 @@
 						<div class="blog_text">
 							<h5><a href="#">PEACH or PEACH/TRIPLE BERRY - $17</a></h5>
 							<span>From August through Thanksgiving</span>
-							<p>raspberry, blackberry &amp; blueberry</p>
+							<p>raspberry, blackberry &amp; strawberry</p>
 						</div>
 					</div>
 				</div>
