Update the Lemon meringue dates. Remove chocolate chip. Move Cranberry pie

--- a/www/index.html
+++ b/www/index.html
@@ -253,13 +253,13 @@
 					</div>
 				</div>
 				<div class="col-sm-4">
-					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
+					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
 						<div class="blog_img">
-							<a href="#"><img src="images/blog/choco-chip.jpg" alt="" /></a>
+							<a href="#"><img src="images/blog/cranberry-apple-walnut2.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">CHOCOLATE CHIP PIE - $17</a></h5>
-							<span>Available all year</span>
+							<h5><a href="#">CRANBERRY APPLE WALNUT - $20</a></h5>
+							<span>Available Thanksgiving through New Year's</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
@@ -274,18 +274,6 @@
 						<div class="blog_text">
 							<h5><a href="#">PUMPKIN CHIFFON PIE - $17</a></h5>
 							<span>Available November through Christmas</span>
-							<p>&nbsp;</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
-						<div class="blog_img">
-							<a href="#"><img src="images/blog/cranberry-apple-walnut2.jpg" alt="" /></a>
-						</div>
-						<div class="blog_text">
-							<h5><a href="#">CRANBERRY APPLE WALNUT - $20</a></h5>
-							<span>Available Thanksgiving through New Year's</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
@@ -311,7 +299,7 @@
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">LEMON MERINGUE PIE - $17</a></h5>
-							<span>Available all year</span>
+							<span>Available all summer</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
