Add order limit date for the xmas pies

--- a/www/index.html
+++ b/www/index.html
@@ -85,6 +85,8 @@
 						Apple Pie $17 (limited quantities)<br>
 						Caramel Apple Pie $20 (limited quantities)
 					</p>
+					<span>❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️</span><br>
+					<span class="green_text" style="font-size: 36px">Place orders by December 18th 2020</span><br>
 					<span>❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️❄️</span>
 				</div>
 			</div>
