Remove css cache

--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
 	<!-- slicknav -->
     <link rel="stylesheet" href="css/slicknav.css">
 	<!-- style css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?d=20201204">
 	<!-- responsive -->
     <link rel="stylesheet" href="css/responsive.css"/>
 	<!-- favicon -->
