Add the new eggnog pie

--- a/www/index.html
+++ b/www/index.html
@@ -225,7 +225,7 @@
 				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
 					<h1>SPECIAL PIES</h1>
 					<p>
-						Pumpkin chiffon pie, Pecan pie, Chocolate chip pie, Caramel apple pie
+						Pumpkin chiffon pie, Pecan pie, Caramel apple pie,...
 					</p>
 				</div>
 			</div>
@@ -261,7 +261,7 @@
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">CRANBERRY APPLE WALNUT - $20</a></h5>
-							<span>Available Thanksgiving through New Year's</span>
+							<span>Available from Thanksgiving through New Year's</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
@@ -302,6 +302,22 @@
 						<div class="blog_text">
 							<h5><a href="#">LEMON MERINGUE PIE - $17</a></h5>
 							<span>Available all summer</span>
+							<p>&nbsp;</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-4">
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/eggnog.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">BLACK BOTTOM EGGNOG PIE - $20</a></h5>
+							<span>Chocolate ganache with whipped eggnog. Available from Thanksgiving through New Year's</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
