--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/ec64ff3c588869ba913df4cd1/b18ff1dcc98040d745358d6dd.js");</script>
   </head>
   <body  data-spy="scroll" data-target="#navbar-example">
 	<div id="home"></div>
