--- a/www/index.html
+++ b/www/index.html
@@ -67,6 +67,84 @@
 			</div>
 		</div>
 	</header>
+    <!-- slider-section-start -->
+    <section class="slider_area">
+        <div id="image_carousel_1" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators slider_indicators">
+                <li data-target="#image_carousel_1" data-slide-to="0" class="active"></li>
+                <li data-target="#image_carousel_1" data-slide-to="1"></li>
+                <li data-target="#image_carousel_1" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <div class="single_slide">
+                        <div class="slider_bg slide-1"></div>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-4 col-sm-6">
+                                    <div class="slide_text">
+                                        <div class="table">
+                                            <div class="table-cell">
+                                                <h1>WE LOVE PIES</h1>
+                                                <div class="bg-yellow"></div>
+                                                <span>Making pies is an art... This starts from selecting the best ingredients, but also giving it time &amp; love...</span><br />
+                                                <a class="digital" href="#contact">Order your custom pie</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="single_slide">
+                        <div class="slider_bg slide-2"></div>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-4 col-sm-6">
+                                    <div class="slide_text">
+                                        <div class="table">
+                                            <div class="table-cell">
+                                                <h1>FRUIT PIES</h1>
+                                                <div class="bg-yellow"></div>
+                                                <span>Apple, peach, berry... made with local produce</span><br />
+                                                <a class="digital" href="#contact">Order your fresh Pie</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="single_slide">
+                        <div class="slider_bg slide-3"></div>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-4 col-sm-6">
+                                    <div class="slide_text">
+                                        <div class="table">
+                                            <div class="table-cell">
+                                                <h1>DINNER PIES</h1>
+                                                <div class="bg-yellow"></div>
+                                                <span>Beef, chicken and seasonal</span><br />
+                                                <a class="digital" href="#contact">Order Now</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="left fawesome-control" href="#image_carousel_1" role="button" data-slide="prev"><img src="images/slider/arrow-pre.png" alt="" /></a>
+            <a class="right fawesome-control" href="#image_carousel_1" role="button" data-slide="next"><img src="images/slider/arrow-next.png" alt="" /></a>
+        </div>
+    </section>
+    <!-- slider-section-end -->    
 	<!-- blog-section-start -->
 	<section class="blog section_padding text-center fruit" id="fruits">
 		<div class="container">
