Add valentine special

--- a/www/index.html
+++ b/www/index.html
@@ -55,6 +55,7 @@
 				<nav class="mainmenu"  id="navbar-example">
 					<ul id="nav" class="nav nav-tabs" role="tablist">
 						<li><a href="#home">HOME</a></li>
+						<li><a href="#season">💝</a></li>
 						<li><a href="#fruits">FRUITS PIES</a></li>
 						<li><a href="#cream">CREAM PIES</a></li>
 						<li><a href="#special">SPECIAL PIES</a></li>
@@ -67,84 +68,57 @@
 			</div>
 		</div>
 	</header>
-    <!-- slider-section-start -->
-    <section class="slider_area">
-        <div id="image_carousel_1" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators slider_indicators">
-                <li data-target="#image_carousel_1" data-slide-to="0" class="active"></li>
-                <li data-target="#image_carousel_1" data-slide-to="1"></li>
-                <li data-target="#image_carousel_1" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <div class="single_slide">
-                        <div class="slider_bg slide-1"></div>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-4 col-sm-6">
-                                    <div class="slide_text">
-                                        <div class="table">
-                                            <div class="table-cell">
-                                                <h1>WE LOVE PIES</h1>
-                                                <div class="bg-yellow"></div>
-                                                <span>Making pies is an art... This starts from selecting the best ingredients, but also giving it time &amp; love...</span><br />
-                                                <a class="digital" href="#contact">Order your custom pie</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="single_slide">
-                        <div class="slider_bg slide-2"></div>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-4 col-sm-6">
-                                    <div class="slide_text">
-                                        <div class="table">
-                                            <div class="table-cell">
-                                                <h1>FRUIT PIES</h1>
-                                                <div class="bg-yellow"></div>
-                                                <span>Apple, peach, berry... made with local produce</span><br />
-                                                <a class="digital" href="#contact">Order your fresh Pie</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="single_slide">
-                        <div class="slider_bg slide-3"></div>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-4 col-sm-6">
-                                    <div class="slide_text">
-                                        <div class="table">
-                                            <div class="table-cell">
-                                                <h1>DINNER PIES</h1>
-                                                <div class="bg-yellow"></div>
-                                                <span>Beef, chicken and seasonal</span><br />
-                                                <a class="digital" href="#contact">Order Now</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a class="left fawesome-control" href="#image_carousel_1" role="button" data-slide="prev"><img src="images/slider/arrow-pre.png" alt="" /></a>
-            <a class="right fawesome-control" href="#image_carousel_1" role="button" data-slide="next"><img src="images/slider/arrow-next.png" alt="" /></a>
-        </div>
-    </section>
-    <!-- slider-section-end -->    
+	<!-- header-section-end -->
+	<section class="blog section_padding text-center fruit" id="season">
+		<div class="container">
+			<div class="row">
+				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
+					<h1>💝💝 VALENTINE'S PIES 💝💝</h1>
+					<span>Available from now until February 14th</span>
+					<p></p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/heart-wrap.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">Gift wrapped box - $20</a></h5>
+							<span>Includes 5 heart shaped hand pies/Pie Pops</span>
+							<p>Please place order 5 days in advance</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/heart-box2.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">6 Heart shaped Pies - $15</a></h5>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInRight" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/heart-shape.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">Individual heart Pies</a></h5>
+							<span></span>
+							<p>
+								Heart shaped pie $2.50 each<br>
+								Hand pies $3 each
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- blog-section-start -->
 	<section class="blog section_padding text-center fruit" id="fruits">
 		<div class="container">
