--- a/www/index.html
+++ b/www/index.html
@@ -266,6 +266,22 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-sm-4">
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/banoffee.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">BANOFFEE PIE - $20</a></h5>
+							<span>Toffee, banana, whipped cream in a graham cracker crust. Available all year.</span>
+							<p>&nbsp;</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>	
 	<!-- blog-section-end -->
