--- a/www/index.html
+++ b/www/index.html
@@ -327,7 +327,7 @@
 							<a href="#"><img src="images/blog/pumpkin2.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">PUMPKIN CHIFFON PIE - $17</a></h5>
+							<h5><a href="#">PUMPKIN CHIFFON PIE - $20</a></h5>
 							<span>Available November through Christmas</span>
 							<p>&nbsp;</p>
 						</div>
@@ -421,7 +421,7 @@
 				<div class="col-sm-4">
 					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
 						<div class="blog_img">
-							<a href="#"><img src="images/blog/beef.jpg" alt="" /></a>
+							<a href="#"><img src="images/blog/beef_pot.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">BEEF POT PIE</a></h5>
@@ -433,7 +433,7 @@
 				<div class="col-sm-4">
 					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
 						<div class="blog_img">
-							<a href="#"><img src="images/blog/turkey.jpg" alt="" /></a>
+							<a href="#"><img src="images/blog/turkey_pot.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">TURKEY POT PIE</a></h5>
