Change the price of special pies to all at

--- a/www/index.html
+++ b/www/index.html
@@ -278,7 +278,8 @@
 				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
 					<h1>SPECIAL PIES</h1>
 					<p>
-						Pumpkin chiffon pie, Pecan pie, Caramel apple pie,...
+						Pumpkin chiffon pie, Pecan pie, Caramel apple pie,...<br>
+						<b>$20</b>
 					</p>
 				</div>
 			</div>
@@ -289,7 +290,7 @@
 							<a href="#"><img src="images/blog/caramel-apple3.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">CARAMEL APPLE PIE - $20</a></h5>
+							<h5><a href="#">CARAMEL APPLE PIE</a></h5>
 							<span>Available September 15th through Christmas</span>
 							<p>&nbsp;</p>
 						</div>
@@ -301,7 +302,7 @@
 							<a href="#"><img src="images/blog/pecan.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">PECAN PIE - $20</a></h5>
+							<h5><a href="#">PECAN PIE</a></h5>
 							<span>Available for Thanksgiving and Christmas</span>
 							<p>&nbsp;</p>
 						</div>
@@ -313,7 +314,7 @@
 							<a href="#"><img src="images/blog/cranberry-apple-walnut2.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">CRANBERRY APPLE WALNUT - $20</a></h5>
+							<h5><a href="#">CRANBERRY APPLE WALNUT</a></h5>
 							<span>Available from Thanksgiving through New Year's</span>
 							<p>&nbsp;</p>
 						</div>
@@ -327,7 +328,7 @@
 							<a href="#"><img src="images/blog/pumpkin2.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">PUMPKIN CHIFFON PIE - $20</a></h5>
+							<h5><a href="#">PUMPKIN CHIFFON PIE</a></h5>
 							<span>Available November through Christmas</span>
 							<p>&nbsp;</p>
 						</div>
@@ -339,7 +340,7 @@
 							<a href="#"><img src="images/blog/peanut-butter-pie.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">PEANUT BUTTER PIE - $20</a></h5>
+							<h5><a href="#">PEANUT BUTTER PIE</a></h5>
 							<span>Whipped fluffy peanut butter cream with a chocolate peanut butter cup topping</span>
 							<p></p>
 						</div>
@@ -353,7 +354,7 @@
 							<a href="#"><img src="images/blog/lemon-meringue.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">LEMON MERINGUE PIE - $17</a></h5>
+							<h5><a href="#">LEMON MERINGUE PIE</a></h5>
 							<span>Available all summer</span>
 							<p>&nbsp;</p>
 						</div>
@@ -367,7 +368,7 @@
 							<a href="#"><img src="images/blog/eggnog.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">BLACK BOTTOM EGGNOG PIE - $20</a></h5>
+							<h5><a href="#">BLACK BOTTOM EGGNOG PIE</a></h5>
 							<span>Chocolate ganache with whipped eggnog. Available from Thanksgiving through New Year's</span>
 							<p>&nbsp;</p>
 						</div>
@@ -379,7 +380,7 @@
 							<a href="#"><img src="images/blog/banoffee.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">BANOFFEE PIE - $20</a></h5>
+							<h5><a href="#">BANOFFEE PIE</a></h5>
 							<span>Toffee, banana, whipped cream in a graham cracker crust. Available all year.</span>
 							<p>&nbsp;</p>
 						</div>
