Set the lemon meringue available all year

--- a/www/index.html
+++ b/www/index.html
@@ -355,7 +355,7 @@
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">LEMON MERINGUE PIE</a></h5>
-							<span>Available all summer</span>
+							<span>Available all year</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
