Add strawberry, chnage Kelli picture and remove the carrousel to add Thanksgiving pies

--- a/www/index.html
+++ b/www/index.html
@@ -67,84 +67,20 @@
 			</div>
 		</div>
 	</header>
-    <!-- slider-section-start -->
-    <section class="slider_area">
-        <div id="image_carousel_1" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators slider_indicators">
-                <li data-target="#image_carousel_1" data-slide-to="0" class="active"></li>
-                <li data-target="#image_carousel_1" data-slide-to="1"></li>
-                <li data-target="#image_carousel_1" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <div class="single_slide">
-                        <div class="slider_bg slide-1"></div>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-4 col-sm-6">
-                                    <div class="slide_text">
-                                        <div class="table">
-                                            <div class="table-cell">
-                                                <h1>WE LOVE PIES</h1>
-                                                <div class="bg-yellow"></div>
-                                                <span>Making pies is an art... This starts from selecting the best ingredients, but also giving it time &amp; love...</span><br />
-                                                <a class="digital" href="#contact">Order your custom pie</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="single_slide">
-                        <div class="slider_bg slide-2"></div>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-4 col-sm-6">
-                                    <div class="slide_text">
-                                        <div class="table">
-                                            <div class="table-cell">
-                                                <h1>FRUIT PIES</h1>
-                                                <div class="bg-yellow"></div>
-                                                <span>Apple, peach, berry... made with local produce</span><br />
-                                                <a class="digital" href="#contact">Order your fresh Pie</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="single_slide">
-                        <div class="slider_bg slide-3"></div>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-4 col-sm-6">
-                                    <div class="slide_text">
-                                        <div class="table">
-                                            <div class="table-cell">
-                                                <h1>DINNER PIES</h1>
-                                                <div class="bg-yellow"></div>
-                                                <span>Beef, chicken and seasonal</span><br />
-                                                <a class="digital" href="#contact">Order Now</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a class="left fawesome-control" href="#image_carousel_1" role="button" data-slide="prev"><img src="images/slider/arrow-pre.png" alt="" /></a>
-            <a class="right fawesome-control" href="#image_carousel_1" role="button" data-slide="next"><img src="images/slider/arrow-next.png" alt="" /></a>
-        </div>
-    </section>
-    <!-- slider-section-end -->
+	<section class="blog section_padding text-center season" id="season">
+		<div class="container">
+			<div class="row">
+				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
+					<h1 class="" style="font-size: 36px;">THANKSGIVING PIES</h1>
+					<p style="font-size: 20px; padding-bottom: 20px;">
+						Currently all pies on the website are available.<br>
+						Orders accepted now until November 18th<br>
+						Text Kelli at 801-941-1855
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- blog-section-start -->
 	<section class="blog section_padding text-center fruit" id="fruits">
 		<div class="container">
@@ -154,7 +90,8 @@
 					<span>AVAILABLE IN SEASON and slightly beyond.</span>
 					<p>
 						strawberry/rhubarb, cherry, peach, peach/berry, apple...<br>
-						<i>continuously inventing new recipes</i>
+						<i>continuously inventing new recipes</i><br>
+						<b>$20</b>
 					</p>
 				</div>
 			</div>
@@ -165,7 +102,7 @@
 							<a href="#"><img src="images/blog/apple.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">APPLE PIE - $17</a></h5>
+							<h5><a href="#">APPLE PIE</a></h5>
 							<span>From September through Christmas</span>
 							<p>&nbsp;</p>
 						</div>
@@ -177,7 +114,7 @@
 							<a href="#"><img src="images/blog/triple-berry.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">PEACH or PEACH/TRIPLE BERRY - $17</a></h5>
+							<h5><a href="#">PEACH or PEACH/TRIPLE BERRY</a></h5>
 							<span>From August through Thanksgiving</span>
 							<p>raspberry, blackberry &amp; strawberry</p>
 						</div>
@@ -189,15 +126,23 @@
 							<a href="#"><img src="images/blog/strawberry.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">STRAWBERRY/RHUBARB PIE - $17</a></h5>
-							<span>From May to July</span>
-							<p>Lattice top or full crust</p>
+							<h5><a href="#">STRAWBERRY-RHUBARB PIE</a></h5>
+							<span>From May through Thanksgiving</span>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-4">
+					<div class="single_blog wow fadeInRight" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/strawberry_pie.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">STRAWBERRY PIE</a></h5>
+							<span>From May through Thanksgiving</span>
+						</div>
+					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
@@ -205,9 +150,8 @@
 							<a href="#"><img src="images/blog/cherry2.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">CHERRY PIE - $20</a></h5>
+							<h5><a href="#">CHERRY PIE</a></h5>
 							<span>From July 4th through Thanksgiving</span>
-							<p>&nbsp;</p>
 						</div>
 					</div>
 				</div>
@@ -224,7 +168,7 @@
 					<p>
 						Available all year round: chocolate, banana, coconut!<br>
 						comes with Graham cracker crust<br>
-						<b>$17</b>
+						<b>$20</b>
 					</p>
 				</div>
 			</div>
@@ -476,7 +420,7 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="team_text wow fadeInRight" data-wow-delay="0.3s">
-						<img src="images/team/kelli2.jpg" alt="" />
+						<img src="images/team/Kelli3.jpg" alt="" />
 						<div class="team_single_text">
 							<span class="span_first">Kelli</span><br />
 						</div>
